--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
   <link rel="stylesheet" href="./styles.css">
   <title>TheOldTravellerNetwork | About</title>
-  <link rel="icon" href="./THE_OLD_TRAVELLER.png">
+  <link rel="icon" href="./logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
